# subtend

./: .gitignore  README.md  circle.yml  moo  stack.yaml  subtend.cabal
.github/workflows/: haskell.yml
app/: Main.hs
corpus/: sample.srt
src/Subtend/: Conversion.hs  Duration.hs  Normalise.hs  Options.hs
src/Subtend/Action/: Convert.hs  Help.hs  Merge.hs
src/Subtend/Ast/: Ass.hs  Srt.hs
src/Subtend/Data/: List.hs  String.hs  ToMap.hs
src/Subtend/Data/Attoparsec/: Text.hs
src/Subtend/Format/: Ass.hs  Srt.hs
src/Subtend/Options/: Cmd.hs
src/Subtend/Options/Cmd/: Convert.hs  Help.hs  Merge.hs
src/Subtend/Print/: Srt.hs
test/Subtend/Format/: AssSpec.hs  SrtSpec.hs
