name:                   subtend
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/subtend#readme
license:                BSD3
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2017 Author name here
category:               Web
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Subtend.Action.Help
                      , Subtend.Action.Merge
                      , Subtend.Options
                      , Subtend.Options.Cmd
                      , Subtend.Options.Cmd.Help
                      , Subtend.Options.Cmd.Merge
  build-depends:        base >= 4.7 && < 5
                      , conduit
                      , gitrev
                      , lens
                      , optparse-applicative
                      , text
  default-language:     Haskell2010

executable subtend
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , gitrev
                      , lens
                      , optparse-applicative
                      , subtend
  default-language:     Haskell2010

test-suite subtend-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , conduit
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/subtend
