name:                   subtend
version:                0.1.0.0
synopsis:               Subtitle manipulation
description:            Subtitle manipulation.
homepage:               https://github.com/githubuser/subtend#readme
license:                BSD3
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2017 Author name here
category:               Web
build-type:             Simple
extra-source-files:     README.md
                        corpus/sample.srt
cabal-version:          >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Subtend.Action.Help
                      , Subtend.Action.Convert
                      , Subtend.Action.Merge
                      , Subtend.Ast.Ass
                      , Subtend.Ast.Srt
                      , Subtend.Conversion
                      , Subtend.Data.Attoparsec.Text
                      , Subtend.Data.List
                      , Subtend.Data.String
                      , Subtend.Data.ToMap
                      , Subtend.Duration
                      , Subtend.Format.Ass
                      , Subtend.Format.Srt
                      , Subtend.Normalise
                      , Subtend.Options
                      , Subtend.Options.Cmd
                      , Subtend.Options.Cmd.Convert
                      , Subtend.Options.Cmd.Help
                      , Subtend.Options.Cmd.Merge
                      , Subtend.Print.Srt
  other-modules:        Paths_subtend
  build-depends:        base >= 4.7 && < 5
                      , ansi-wl-pprint
                      , attoparsec
                      , bytestring
                      , conduit
                      , conduit-combinators
                      , containers
                      , data-default
                      , gitrev
                      , lens
                      , mono-traversable
                      , optparse-applicative
                      , text
  default-language:     Haskell2010

executable subtend
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , gitrev
                      , lens
                      , optparse-applicative
                      , subtend
  other-modules:        Paths_subtend
  default-language:     Haskell2010

test-suite subtend-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        Paths_subtend
                      , Subtend.Format.AssSpec
                      , Subtend.Format.SrtSpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base
                      , attoparsec
                      , hspec
                      , hedgehog
                      , hw-hspec-hedgehog
                      , subtend
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/subtend
